# MediaOrganizer

./: .gitignore  CMakeLists.txt  MediaOrganizer.pro  README.md  build.txt  main.cpp  main.h  mainwindow.cpp  mainwindow.h  mo.cpp  mo.h  mo_global.h  separator.cpp  separator.h  videoframe.cpp  videoplayer.cpp  videoplayer.h
cmake/: ProductVersionConfig.cmake  ProjectConfig.cmake
conf/: mo_config.h.in
gtk3/: CMakeLists.txt
gtk3/cmake/: UseVala.cmake
gtk3/src/: .main.vala.swp  main.vala  main_window.vala  video_content.vala  video_surface.vala
inc/: thumbnailer.h  videoframe_def.h  videoplayer_p.h
libmo/: CMakeLists.txt
libmo/cmake/: ProjectConfig.cmake
libmo/conf/: libmo.pc.in  libmo.vapi
libmo/inc/: filebrowser_p.h  thumbnailer.h  videoframe_p.h  videoplayer_p.h
libmo/pub/: libmo.h  videoframe.h  videoplayer.h
libmo/src/: filebrowser.c  thumbnailer.c  videoframe.c  videoplayer.c
libmo/tests/: CMakeLists.txt  test_global.h  test_videoplayer.c  test_videoplayer.h
pub/: filebrowser.h  videoframe.h  videoplayer.h
src/: filebrowser.c  thumbnailer.c  videoframe.c  videoplayer.c
tests/: CMakeLists.txt  main.c  test_filebrowser.c  test_filebrowser.h  test_global.h  test_libmo.pro  test_videoplayer.c  test_videoplayer.h
windows/: 3rdparty.txt  VersionResource.rc
windows/lib/win32/: gio-2.0.lib  glib-2.0.lib  gmodule-2.0.lib  gobject-2.0.lib  gthread-2.0.lib  libffi.lib  zdll.lib
windows/lib/x64/: gio-2.0.lib  glib-2.0.lib  gmodule-2.0.lib  gobject-2.0.lib  gthread-2.0.lib  libffi.lib  zlib1.lib
